5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1573_1334.log
== TEST (2019-03-11 15:49:57) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - )

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 80 / 9 )

print("Potenciacao: ", **64)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", 10 - )
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:49:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - )

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 80 / 9 )

print("Potenciacao: ", **64)
-- EXECUTION TIME:
0.149942
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 3
    print("Subtracao: ", 10 - )
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 80 / 9 )

print("Potenciacao: ", 2 **3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.88888888888889
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 80 / 9 )

print("Potenciacao: ", 2 **3)
-- EXECUTION TIME:
0.160089
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.88888888888889
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 80 / 9 )

print("Potenciacao: ", 2 **3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.88888888888889
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2 **3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:53) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2 **3)
-- EXECUTION TIME:
0.184455
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 80 // 9)

print("Potenciacao: ", 2 **3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:51:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 80 // 9)

print("Potenciacao: ", 2 **3)
-- EXECUTION TIME:
0.154172
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
